feat: 세션 관리 고도화 및 UserStatus 제거
- SessionRegistry 기반 동시 로그인 제한 (maximumSessions=1)
- HttpSessionEventPublisher Bean 등록
- DiscodeitUserDetails equals/hashCode 오버라이딩
- UserStatus → SessionRegistry 기반 온라인 여부 판단으로 리팩토링
- UserStatus 관련 파일 전체 삭제
  (UserStatus, UserStatusRepository, UserStatusService,
   BasicUserStatusService, UserStatusDto, UserStatusUpdateRequest)
- UserMapper, MessageMapper UserStatus 파라미터 → boolean isOnline으로 교체
- UserController에서 UserStatusService 제거