@@ -3,6 +3,7 @@ package com.sprint.mission.discodeit.service;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 
@@ -14,7 +15,6 @@ import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Channel.ChannelType;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.exception.ChannelNotFoundException;
 import com.sprint.mission.discodeit.exception.MessageNotFoundException;
 import com.sprint.mission.discodeit.exception.UserNotFoundException;
@@ -24,10 +24,10 @@ import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
-import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.basic.BasicMessageService;
 import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -38,6 +38,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.SliceImpl;
+import org.springframework.security.core.session.SessionRegistry;
 
 @ExtendWith(MockitoExtension.class)
 class BasicMessageServiceTest {
@@ -53,20 +54,17 @@ class BasicMessageServiceTest {
   @Mock
   private BinaryContentStorage binaryContentStorage;
   @Mock
-  private UserStatusRepository userStatusRepository;
-  @Mock
   private MessageMapper messageMapper;
   @Mock
   private UserMapper userMapper;
+  @Mock
+  private SessionRegistry sessionRegistry;
 
   @InjectMocks
   private BasicMessageService messageService;
 
-  // ───── create ─────
-
   @Test
   void create_성공() {
-    // given
     UUID channelId = UUID.randomUUID();
     UUID authorId = UUID.randomUUID();
     MessageCreateRequest request = new MessageCreateRequest("안녕하세요", channelId, authorId);
@@ -74,41 +72,35 @@ class BasicMessageServiceTest {
     Channel channel = new Channel(ChannelType.PUBLIC, "general", "공용 채널");
     User author = new User("jihye", "jihye@test.com", "password123", null);
     Message message = new Message("안녕하세요", channel, author);
-    UserStatus status = new UserStatus(author, Instant.now());
     MessageDto dto = new MessageDto(message.getId(), Instant.now(), Instant.now(), "안녕하세요",
         channelId, null, List.of());
 
     given(channelRepository.findById(channelId)).willReturn(Optional.of(channel));
     given(userRepository.findById(authorId)).willReturn(Optional.of(author));
     given(messageRepository.saveAndFlush(any(Message.class))).willReturn(message);
-    given(userStatusRepository.findByUserId(any())).willReturn(Optional.of(status));
-    given(userMapper.toDto(any(User.class), any(UserStatus.class))).willReturn(null);
-    given(messageMapper.toDto(any(Message.class), any(), any())).willReturn(dto);
+    given(sessionRegistry.getAllSessions(any(), anyBoolean())).willReturn(Collections.emptyList());
+    given(userMapper.toDto(any(User.class), anyBoolean())).willReturn(null);
+    given(messageMapper.toDto(any(Message.class), anyBoolean(), any())).willReturn(dto);
 
-    // when
     MessageDto result = messageService.create(request, null);
 
-    // then
     assertThat(result).isNotNull();
     assertThat(result.content()).isEqualTo("안녕하세요");
   }
 
   @Test
   void create_실패_존재하지않는채널() {
-    // given
     UUID channelId = UUID.randomUUID();
     UUID authorId = UUID.randomUUID();
     MessageCreateRequest request = new MessageCreateRequest("안녕하세요", channelId, authorId);
     given(channelRepository.findById(channelId)).willReturn(Optional.empty());
 
-    // when & then
     assertThatThrownBy(() -> messageService.create(request, null))
         .isInstanceOf(ChannelNotFoundException.class);
   }
 
   @Test
   void create_실패_존재하지않는유저() {
-    // given
     UUID channelId = UUID.randomUUID();
     UUID authorId = UUID.randomUUID();
     MessageCreateRequest request = new MessageCreateRequest("안녕하세요", channelId, authorId);
@@ -117,84 +109,65 @@ class BasicMessageServiceTest {
     given(channelRepository.findById(channelId)).willReturn(Optional.of(channel));
     given(userRepository.findById(authorId)).willReturn(Optional.empty());
 
-    // when & then
     assertThatThrownBy(() -> messageService.create(request, null))
         .isInstanceOf(UserNotFoundException.class);
   }
 
-  // ───── update ─────
-
   @Test
   void update_성공() {
-    // given
     UUID messageId = UUID.randomUUID();
     MessageUpdateRequest request = new MessageUpdateRequest("수정된 내용");
     Channel channel = new Channel(ChannelType.PUBLIC, "general", "공용 채널");
     User author = new User("jihye", "jihye@test.com", "password123", null);
     Message message = new Message("안녕하세요", channel, author);
-    UserStatus status = new UserStatus(author, Instant.now());
     MessageDto dto = new MessageDto(messageId, Instant.now(), Instant.now(), "수정된 내용",
         channel.getId(), null, List.of());
 
     given(messageRepository.findById(messageId)).willReturn(Optional.of(message));
-    given(userStatusRepository.findByUserId(any())).willReturn(Optional.of(status));
-    given(userMapper.toDto(any(User.class), any(UserStatus.class))).willReturn(null);
-    given(messageMapper.toDto(any(Message.class), any(), any())).willReturn(dto);
+    given(sessionRegistry.getAllSessions(any(), anyBoolean())).willReturn(Collections.emptyList());
+    given(userMapper.toDto(any(User.class), anyBoolean())).willReturn(null);
+    given(messageMapper.toDto(any(Message.class), anyBoolean(), any())).willReturn(dto);
 
-    // when
     MessageDto result = messageService.update(messageId, request);
 
-    // then
     assertThat(result).isNotNull();
     assertThat(result.content()).isEqualTo("수정된 내용");
   }
 
   @Test
   void update_실패_존재하지않는메시지() {
-    // given
     UUID messageId = UUID.randomUUID();
     MessageUpdateRequest request = new MessageUpdateRequest("수정된 내용");
     given(messageRepository.findById(messageId)).willReturn(Optional.empty());
 
-    // when & then
     assertThatThrownBy(() -> messageService.update(messageId, request))
         .isInstanceOf(MessageNotFoundException.class);
   }
 
-  // ───── delete ─────
-
   @Test
   void delete_성공() {
-    // given
     UUID messageId = UUID.randomUUID();
     Channel channel = new Channel(ChannelType.PUBLIC, "general", "공용 채널");
     User author = new User("jihye", "jihye@test.com", "password123", null);
     Message message = new Message("안녕하세요", channel, author);
     given(messageRepository.findById(messageId)).willReturn(Optional.of(message));
 
-    // when
     messageService.delete(messageId);
 
-    // then
     then(messageRepository).should().delete(message);
   }
 
   @Test
   void delete_실패_존재하지않는메시지() {
-    // given
     UUID messageId = UUID.randomUUID();
     given(messageRepository.findById(messageId)).willReturn(Optional.empty());
 
-    // when & then
     assertThatThrownBy(() -> messageService.delete(messageId))
         .isInstanceOf(MessageNotFoundException.class);
   }
 
-  // ───── findByChannelId ─────
-
   @Test
   void findAllByChannelId_성공() {
-    // given
     UUID channelId = UUID.randomUUID();
     Channel channel = new Channel(ChannelType.PUBLIC, "general", "공용 채널");
     User author = new User("jihye", "jihye@test.com", "password123", null);
@@ -204,28 +177,22 @@ class BasicMessageServiceTest {
 
     given(messageRepository.findAllByChannelIdOrderByCreatedAtDesc(any(), any(Pageable.class)))
         .willReturn(new SliceImpl<>(List.of(message)));
-    given(userStatusRepository.findAllByUserIdIn(any())).willReturn(List.of());
-    given(messageMapper.toDto(any(Message.class), any(), any())).willReturn(dto);
+    given(sessionRegistry.getAllSessions(any(), anyBoolean())).willReturn(Collections.emptyList());
+    given(messageMapper.toDto(any(Message.class), anyBoolean(), any())).willReturn(dto);
 
-    // when
     PageResponse<MessageDto> result = messageService.findAllByChannelId(channelId, null, 50);
 
-    // then
     assertThat(result.content()).hasSize(1);
   }
 
   @Test
   void findAllByChannelId_빈목록() {
-    // given
     UUID channelId = UUID.randomUUID();
     given(messageRepository.findAllByChannelIdOrderByCreatedAtDesc(any(), any(Pageable.class)))
         .willReturn(new SliceImpl<>(List.of()));
-    given(userStatusRepository.findAllByUserIdIn(any())).willReturn(List.of());
 
-    // when
     PageResponse<MessageDto> result = messageService.findAllByChannelId(channelId, null, 50);
 
-    // then
     assertThat(result.content()).isEmpty();
   }
 }
